# Send-RaspberryPi-IP-To-PushDeer

./: README.md  SendIPToPushdeer.py
Cpp/: CMakeLists.txt  sendIpToPushdeer.cpp
Cpp/doc/: 在WSL中配置交叉编译环境.md
Cpp/script/: sendIpToPushdeer.service
Python/: SendIPToPushdeer.py
